color theme changes done

--- a/app/src/main/res/drawable/bg_orange_stroke_round_border.xml
+++ b/app/src/main/res/drawable/bg_orange_stroke_round_border.xml
@@ -4,5 +4,5 @@
     <stroke
         android:width="@dimen/_1sdp"
         android:color="@color/line_color" />
-    <solid android:color="@color/fsm_bg_light_teal60"/>
+    <solid android:color="@color/white"/>
 </shape>
