--- a/app/src/main/res/layout/activity_check_vehicle_status.xml
+++ b/app/src/main/res/layout/activity_check_vehicle_status.xml
@@ -59,16 +59,16 @@
             android:layout_marginHorizontal="@dimen/_12sdp"
             android:layout_marginTop="@dimen/_8sdp"
             android:background="@drawable/edit_back_view"
-            android:backgroundTint="@color/fsm_bg_light_teal60_1"
+            android:backgroundTint="@color/white"
             android:drawableStart="@drawable/iv_search_mini"
             android:drawablePadding="@dimen/_7sdp"
-            android:drawableTint="@color/fsm_text_color80"
+            android:drawableTint="@color/fsm_text_color"
             android:gravity="center_vertical"
             android:hint="Vehicle Number"
             android:paddingHorizontal="@dimen/_15sdp"
             android:singleLine="true"
             android:textColor="@color/fsm_text_color"
-            android:textColorHint="@color/fsm_text_color80"
+            android:textColorHint="@color/fsm_text_color"
             android:textSize="@dimen/_14ssp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
