--- a/app/src/main/res/drawable/custom_round_stroke_fsm.xml
+++ b/app/src/main/res/drawable/custom_round_stroke_fsm.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="@dimen/_8sdp"/>
-    <solid android:color="@color/fsm_bg_light_teal"/>
+    <solid android:color="@color/white"/>
     <stroke android:color="@color/fsm_bg_teal"
         android:width="@dimen/_1sdp"/>
 </shape>
