--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,10 +36,11 @@
             android:layout_marginTop="@dimen/_30sdp"
             android:background="@color/white"
             android:src="@drawable/fsm_logo"
+            android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
+            app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <View
             android:id="@+id/bgView"
