--- a/app/src/main/res/layout/holder_project_list.xml
+++ b/app/src/main/res/layout/holder_project_list.xml
@@ -23,7 +23,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/fsm_bg_light_teal"
+        app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="@dimen/_8sdp"
         android:layout_marginHorizontal="@dimen/_12sdp"
         android:layout_marginVertical="@dimen/_5sdp"
