login logout api implemented

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -61,7 +61,7 @@
             android:layout_marginStart="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_25ssp"
             android:layout_marginEnd="@dimen/_16sdp"
-            android:text="Phone Number*"
+            android:text="Email*"
             android:textColor="@color/fsm_text_color"
             android:textSize="@dimen/_12sdp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -73,10 +73,9 @@
             style="@style/EditText.Phone"
             android:layout_width="0dp"
             android:layout_marginTop="8dp"
-            android:hint="Enter Phone Number"
-            android:imeOptions="actionDone"
-            android:inputType="phone"
-            android:maxLength="10"
+            android:hint="example@domain.com"
+            android:imeOptions="actionNext"
+            android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="@id/tvPhone"
             app:layout_constraintStart_toStartOf="@id/tvPhone"
             app:layout_constraintTop_toBottomOf="@+id/tvPhone" />
@@ -101,10 +100,9 @@
             style="@style/EditText.Phone"
             android:layout_width="0dp"
             android:layout_marginTop="8dp"
-            android:hint="Enter Password"
+            android:hint="ABCD1234"
             android:imeOptions="actionDone"
             android:inputType="textPassword"
-            android:maxLength="10"
             app:layout_constraintEnd_toEndOf="@id/tvPassword"
             app:layout_constraintStart_toStartOf="@id/tvPassword"
             app:layout_constraintTop_toBottomOf="@+id/tvPassword" />
