--- a/app/src/main/res/layout/dialog_loading.xml
+++ b/app/src/main/res/layout/dialog_loading.xml
@@ -10,13 +10,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:background="@color/white">
+        android:background="@color/trans">
 
         <com.airbnb.lottie.LottieAnimationView
             android:layout_width="150dp"
             android:layout_height="150dp"
             app:lottie_autoPlay="true"
-            app:lottie_fileName="loader.json"
+            app:lottie_fileName="loader1.json"
             app:lottie_loop="true" />
 
     </LinearLayout>
