--- a/app/src/main/res/layout/activity_issue_super_tag.xml
+++ b/app/src/main/res/layout/activity_issue_super_tag.xml
@@ -14,6 +14,7 @@
 
     <LinearLayout
         android:id="@+id/container"
+        android:weightSum="2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -56,45 +57,88 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/cvPreview"
             android:layout_width="match_parent"
-            app:cardCornerRadius="@dimen/_10sdp"
-            app:cardElevation="@dimen/_5sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginHorizontal="@dimen/_10sdp"
             android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_marginHorizontal="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_weight="1"
+            app:cardCornerRadius="@dimen/_10sdp"
+            app:cardElevation="@dimen/_5sdp">
 
-        <androidx.camera.view.PreviewView
-            android:id="@+id/previewView"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_150sdp" />
+            <androidx.camera.view.PreviewView
+                android:id="@+id/previewView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
         </androidx.cardview.widget.CardView>
 
-        <TextView
-            android:id="@+id/tvValueSet"
-            style="@style/TextView.InterRegular_12ssp"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="0.1"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:gravity="center_vertical"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:drawableStart="@drawable/forward_svgrepo_com"
-            android:drawableTint="@color/fsm_text_color"
-            android:drawablePadding="@dimen/_5sdp"
-            android:text="Value -> "
-            android:textColor="@color/fsm_text_color"
-            android:textSize="@dimen/_14sdp" />
-
-        <View
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="@dimen/_15sdp"
             android:layout_height="0dp"
-            android:layout_weight="2"
-            android:background="@drawable/round_right_top"
-            android:backgroundTint="@color/green_color_text"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:orientation="vertical">
 
-            />
+            <TextView
+                style="@style/TextView.InterRegular_12ssp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:drawablePadding="@dimen/_5sdp"
+                android:gravity="center"
+                android:text="---- OR ----"
+                android:textColor="@color/fsm_text_color"
+                android:textSize="@dimen/_14sdp" />
+
+            <TextView
+                android:id="@+id/tvPhone"
+                style="@style/TextView.InterRegular_12ssp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_25ssp"
+                android:layout_marginHorizontal="@dimen/_10sdp"
+                android:text="FASTag Id*"
+                android:textColor="@color/fsm_text_color"
+                android:textSize="@dimen/_12sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/bgView" />
+
+            <EditText
+                android:id="@+id/etvFastTagId"
+                style="@style/EditText.Phone"
+                android:layout_width="match_parent"
+                android:layout_marginHorizontal="@dimen/_10sdp"
+                android:layout_marginTop="8dp"
+                android:hint="00000000"
+                android:imeOptions="actionNext"
+                android:inputType="number"
+                app:layout_constraintEnd_toEndOf="@id/tvPhone"
+                app:layout_constraintStart_toStartOf="@id/tvPhone"
+                app:layout_constraintTop_toBottomOf="@+id/tvPhone" />
+
+            <TextView
+                android:id="@+id/tvLogin"
+                style="@style/TextView.InterRegular_12ssp"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_40sdp"
+                android:layout_marginHorizontal="@dimen/_45sdp"
+                android:layout_marginTop="@dimen/_65sdp"
+                android:background="@drawable/edit_back_view"
+                android:backgroundTint="@color/line_color"
+                android:fontFamily="@font/inter_semibold"
+                android:foreground="?selectableItemBackground"
+                android:gravity="center"
+                android:onClick="@{v->vm.onClick(v)}"
+                android:text="@string/submit"
+                android:textColor="@color/fsm_bg_light_teal"
+                android:textSize="@dimen/_16sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvResetPass" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
